--- a/package.json
+++ b/package.json
@@ -3,5 +3,9 @@
     "express": "^4.18.2",
     "mongoose": "^7.5.0",
     "uuid": "^9.0.0"
-  }
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
+  },
 }
